--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="twitter:site" content="website" />
-        <meta name="twitter:title" content="Musicalsmth" />
+        <meta name="twitter:title" content="Sangeet" />
         <meta name="twitter:description" content="This is a webplayer that plays songs" />
         <meta name="twitter:image" content="./Media/Image/logoicon.jpeg" />
 
-        <meta property='og:title' content='Musicalsmth' />
+        <meta property='og:title' content='Sangeet' />
         <meta property='og:type' content="website" />
         <meta property='og:description' content='This is a webpage which plays Songs' />
         <meta property="og:image" content='./Media/Image/logoicon.jpeg' />
         <meta name="theme-color" content="#F4C2C2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./Media/logohead.jpg" type="image/x-icon">
-    <title id="head">Musicalsmth</title>
+    <title id="head">Sangeet</title>
 
   
   
@@ -55,7 +55,7 @@
             <!-- first page para-->
           </div>
           <div class="paragraph">
-            <p><b>Heyya! Glad to see ya' here. This is simply yet amazing webplayer site that plays random songs from Jatin's playlist. Go ahead and have fun :)</b></p> </div>
+            <p><b>Heyya! Glad to see ya' here. This is simply yet amazing webplayer site that plays random songs from Sager's playlist. Go ahead and have fun :)</b></p> </div>
 
          <div class="menu-items">
             <li><a href="#home">Home</a></li>
@@ -406,9 +406,9 @@ const mySong = document.getElementById("mySong");
             <a href="./Media/Image/prank.jpg" target="_blank"><i
                     class="fab fa-linkedin"></i></a>
 
-            <a href="https://twitter.com/soonshine24" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/exxncatin" target="_blank"><i class="fab fa-twitter"></i></a>
 
-            <a href="./Media/Image/prank.jpg" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Exxncatin/" target="_blank"><i class="fab fa-github"></i></a>
 
         </div>
         <p  class="devimg">
